--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jogo Quiz</title>
+    <title>Responda as pergunta corretamente</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -35,7 +35,7 @@
 <body>
 
     <div class="quiz-container">
-        <h1>Jogo Quiz</h1>
+        <h1>Responda as pergunta corretamente</h1>
         <div id="pergunta"></div>
 
         <div id="opcoes" class="opcao"></div>
@@ -48,9 +48,9 @@
     <script>
         const perguntas = [
             {
-                pergunta: "Em que cidade do brasil fica a Faculdade Municipal de Palhoça?",
-                opcoes: ["Joinville", "Curitiba", "Porto Alegre", "São José","Palhoça"],
-                resposta: "Palhoça"
+                 pergunta: "Em que estado do brasil fica a Faculdade Municipal de Palhoça?",
+                opcoes: ["Bahia", "Minas Gerais", "Goiás", "Santa Catarina","São Paulo"],
+                resposta: "Santa Catarina"
             },
             {
                 pergunta: "Quem é o professor do programação'Curso de ADS'?",
